# Copyright © 2014 Cisco Systems, Inc.  All rights reserved.
#
# Copyright © 2016 Inria.  All rights reserved.
# See COPYING in top-level directory.

SUBDIRS = hwloc lstopo

if BUILD_NETLOC
SUBDIRS += \
        lsmap \
        lsnettopo \
        netloc_test \
        netloc_gather_ib \
        netloc_reader_ib \
        netloc_reader_of \
        netloc_reader_static \
        netloc_draw
endif
